# star-realms

./: .gitignore  Main.hs  cabal.project  stack.yaml  star-realms.cabal
StarRealms/: Card.hs  Condition.hs  Deck.hs  Game.hs  Location.hs  Player.hs
StarRealms/Card/: Ability.hs  Base.hs  Choice.hs  Faction.hs  Ship.hs
StarRealms/Game/: Action.hs  InPlayCard.hs  Resolution.hs
