cabal-version: 2.2
name: star-realms
version: 0

executable star-realms
  build-depends:
      base
    , planet-mitchell
  default-extensions:
    DataKinds
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    StrictData
    TypeApplications
  ghc-options:
    -Wall
  other-modules:
    StarRealms.Card
    StarRealms.Card.Ability
    StarRealms.Card.Faction
    StarRealms.Card.Base
    StarRealms.Card.Ship
    StarRealms.Deck
    StarRealms.Game
    StarRealms.Game.InPlayCard
    StarRealms.Game.Action
    StarRealms.Location
    StarRealms.Player
  main-is:
    Main.hs
